# simple-knowledge-base

./: Makefile  README.md
.windsurf/rules/: project-overview.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  exceptions.py  main.py  models.py  services.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_models.py  test_properties.py  test_services.py
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AddKnowledge.tsx  IndexSelector.tsx  ManageIndexes.tsx  SearchInterface.tsx  SearchResults.tsx
scripts/: dev.sh  start-backend.sh
