[project]
name = "simple-knowledge-base-backend"
version = "0.1.0"
description = "Semantic Knowledge Base API with FastAPI, LanceDB, and ML-powered search"
readme = "README.md"
authors = [
    { name = "Praveen Chamarthi", email = "1090396+praveenc@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "lancedb==0.19.0",
    "sentence-transformers>=3.3.0",
    "semchunk>=3.2.0",
    "loguru>=0.7.3",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "torch>=2.5.0",
    "pyarrow>=18.1.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "hypothesis>=6.120.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
